service.yml
apiVersion: v1
kind: Service
metadata:
  name: sfeir-lunch-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: sfeir-lunch-deploy
  type: ClusterIP
