ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sfeir-lunch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sfeir-lunch.lu
    http:
      paths:
      - backend:
          serviceName: sfeir-lunch-service
          servicePort: 80
        path: /
